# second-brain-archive

./: .gitignore  LICENSE  README.md  Second Brain.command  pyproject.toml
.github/workflows/: pages.yml  release.yml
docs/: BACKUP.md  CONTENT_RIGHTS.md  DISTRIBUTION.md  GOOGLE_OAUTH_RELEASE.md  PRIVACY.md  PROJECT_PLAN.md  TERMS.md
packaging/: desktop_entry.py  second_brain.spec
packaging/windows/: SecondBrainArchive.iss
scripts/: backup.sh  build_macos.sh  build_public_site.py  build_windows.ps1  configure_release_oauth.sh  run.sh  validate_public_release.py
src/second_brain_archive/: __init__.py  ai.py  archive.py  cli.py  desktop.py  distribution.py  downloader.py  exporter.py  local_ai.py  public_info.json  public_info.py  runtime.py  subtitles.py  transcriber.py  web.py  youtube.py  youtube_oauth_public.json
tests/: test_archive.py
